fix z-index problem with error dialog modal window

--- a/openquakeplatform_ipt/static/ipt/css/ipt.css
+++ b/openquakeplatform_ipt/static/ipt/css/ipt.css
@@ -1,5 +1,9 @@
+.gem-jqueryui-dialog {
+    z-index: 1000;
+}
+
 #oq-body-content {
-width: 100%;
+    width: 100%;
  }
 
 .menuItems{
